--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELIESER</title>
+    <title>Guilherme</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,6 +23,16 @@
                 A escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de Programação.
             </p>
         </div>
+        <img class="escola-imagem" src="escola.png">
+    </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">
+            Quem são nossos estudantes
+        </h2>
+        <img class="estudante-imagem" src="neymar.jpg">
+        <h3 class="estudante-nome">
+            Neymar Jr
+        </h3>
     </section>
 </body>
 </html>
