--- a/index.html
+++ b/index.html
@@ -29,10 +29,35 @@
         <h2 class="estudante-titulo">
             Quem são nossos estudantes
         </h2>
+        <div class="estudante-todos">
+        <div class="estudante-div">
         <img class="estudante-imagem" src="neymar.jpg">
         <h3 class="estudante-nome">
             Neymar Jr
         </h3>
+        <img class="estudante-icone" src="insta.jpeg">
+        <img class="estudante-icone" src="hub.png">
+        <img class="estudante-icone" src="link.png">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="vini.jpeg">
+        <h3 class="estudante-nome">
+            Vini JR
+        </h3>
+        <img class="estudante-icone" src="insta.jpeg">
+        <img class="estudante-icone" src="hub.png">
+        <img class="estudante-icone" src="link.png">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="rodrigo.jpg">
+        <h3 class="estudante-nome">
+            Rodrygo
+        </h3>
+        <img class="estudante-icone" src="insta.jpeg">
+        <img class="estudante-icone" src="hub.png">
+        <img class="estudante-icone" src="link.png">
+    </div>
+</div>
     </section>
 </body>
 </html>
